--- a/ReportMakerSD/App.config
+++ b/ReportMakerSD/App.config
@@ -1,16 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ReportMakerSD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="ReportMakerSD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ReportMakerSD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="ReportMakerSD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
     <userSettings>
         <ReportMakerSD.Properties.Settings>
             <setting name="FolderWithExportSdDefault" serializeAs="String">
@@ -20,40 +20,64 @@
                 <value>ОДУ Северо-Запада:Архангельское РДУ:Балтийское РДУ:Карельское РДУ:Кольское РДУ:Коми РДУ:Ленинградское РДУ:Новгородское РДУ</value>
             </setting>
             <setting name="FGPNames" serializeAs="String">
-                <value>Администраторы справочников Сервис Деск:АСДОУ:АСДУ - Заявки и ремонты:АСДУ - локальные системы:АСДУ - ОИК:АСДУ - телемеханика:АСДУ - технологические системы:Базовая поддержка пользователей:Дежурные специалисты ИТ:Информационная безопасность:Каналы связи:Поддержка аппаратных платформ:Порталы и информационно-справочные системы:Прочие:Руководство ИТ:Сервис Деск:Сети передачи данных:Системное администрирование:Телефония, конференцсвязь:Финансово-экономическая деятельность</value>
+                <value>Администраторы справочников Сервис Деск:АСДОУ:АСДУ - заявки и ремонты:АСДУ - локальные системы:АСДУ - ОИК:АСДУ - достоверизация ТМ:АСДУ - телемеханика:АСДУ - технологические системы:Базовая поддержка пользователей:Дежурные специалисты блока ИТ:Информационная безопасность:Каналы связи:Поддержка аппаратных платформ:Порталы и информационно-справочные системы:Прочие:Руководство ИТ:Сервис Деск:Сети передачи данных:Системное администрирование:Телефония, конференцсвязь:Финансово-экономическая деятельность</value>
             </setting>
             <setting name="WayOfGivingTreatments" serializeAs="String">
-                <value>Документооборот:По почте:Другое:Личное обращение:По телефону:Интернет портал:Консоль самообслуживания:Прямой ввод:Событие системы мониторинга</value>
+                <value>Другое:Документооборот:Эл. почта:Личное обращение:По телефону:Интернет портал:Личный кабинет:Прямой ввод:Событие системы мониторинга</value>
             </setting>
             <setting name="ColumnsFilterNames" serializeAs="String">
-                <value>Остальные колонки:Дата окончания регистрации:Номер:Статус:Организация заявителя:Заявитель:ФГП:Исполнитель:Услуга:Тема:Дата и время решения:Решение:Способ подачи обращения</value>
+                <value>Остальные колонки:Дата окончания регистрации:Номер:Статус:Организация заявителя:Заявитель:ФГП:Исполнитель:Услуга:Тема:Дата и время решения:Решение (для списков):Способ подачи обращения</value>
             </setting>
             <setting name="StatusesNames" serializeAs="String">
                 <value>4 В ожидании:3 Выполняется:2 Назначен:1 Новый</value>
-            </setting>
-            <setting name="ParsingStatus" serializeAs="String">
-                <value>True</value>
             </setting>
             <setting name="TimeFromHour" serializeAs="String">
                 <value>8</value>
             </setting>
             <setting name="TimeToHour" serializeAs="String">
-                <value>16</value>
+                <value>17</value>
             </setting>
             <setting name="TimeFromMinute" serializeAs="String">
                 <value>30</value>
             </setting>
             <setting name="TimeToMinute" serializeAs="String">
-                <value>15</value>
-            </setting>
-            <setting name="ReportTO" serializeAs="String">
-                <value>True</value>
+                <value>30</value>
             </setting>
             <setting name="TO" serializeAs="String">
                 <value>ТО \\</value>
             </setting>
-            <setting name="ReportRDU" serializeAs="String">
-                <value>True</value>
+            <setting name="Report_based_SheetsName" serializeAs="String">
+                <value>Зарегистрированные обращения:График:ФГП:ФГП2:По источнику оповещения</value>
+            </setting>
+            <setting name="ReportODU_MailCopy" serializeAs="String">
+                <value>info_sd@odusz.so-ups.ru; blinov-al@odusz.so-ups.ru; alpatskiy-an@odusz.so-ups.ru; stis@odusz.so-ups.ru; nasonov@odusz.so-ups.ru; tihonov_r@odusz.so-ups.ru</value>
+            </setting>
+            <setting name="ReportRDU_MailTO" serializeAs="String">
+                <value>vif@arhrdu.so-ups.ru; glebov@balticrdu.so-ups.ru; shlyakov@karelia.so-ups.ru; iklouzay@kola.so-ups.ru; potoskuev@komirdu.so-ups.ru; msa@lenrdu.so-ups.ru; povyshevvi@novrdu.so-ups.ru; maltsev@odusz.so-ups.ru</value>
+            </setting>
+            <setting name="ReportRDU_MailCopy" serializeAs="String">
+                <value>maksim@odusz.so-ups.ru; info_sd@odusz.so-ups.ru; alpatskiy-an@odusz.so-ups.ru; stis@odusz.so-ups.ru; nasonov@odusz.so-ups.ru; tihonov_r@odusz.so-ups.ru</value>
+            </setting>
+            <setting name="ReportTO_MailTO" serializeAs="String">
+                <value>kava@odusz.so-ups.ru; nikolaev@odusz.so-ups.ru; smirnov@odusz.so-ups.ru; makarov@odusz.so-ups.ru; hicom@odusz.so-ups.ru; maksim@odusz.so-ups.ru; chulkov@odusz.so-ups.ru; maltsev@odusz.so-ups.ru; vif@arhrdu.so-ups.ru; glebov@balticrdu.so-ups.ru; shlyakov@karelia.so-ups.ru; iklouzay@kola.so-ups.ru; potoskuev@komirdu.so-ups.ru; msa@lenrdu.so-ups.ru; sazonov-ig@odusz.so-ups.ru; PovyshevVI@novrdu.so-ups.ru; alyabiev-nv@odusz.so-ups.ru 
+
+
+</value>
+            </setting>
+            <setting name="ReportTO_MailCopy" serializeAs="String">
+                <value>lopintsev@odusz.so-ups.ru; pyatnitskiy-ev@odusz.so-ups.ru; blinov-al@odusz.so-ups.ru; info_sd@odusz.so-ups.ru; tihonov_r@odusz.so-ups.ru</value>
+            </setting>
+            <setting name="Report_SD" serializeAs="String">
+                <value>info_sd@odusz.so-ups.ru;</value>
+            </setting>
+            <setting name="ReportODU_MailTO" serializeAs="String">
+                <value>kava@odusz.so-ups.ru; adv@odusz.so-ups.ru; nikolaev@odusz.so-ups.ru; smirnov@odusz.so-ups.ru; makarov@odusz.so-ups.ru; hicom@odusz.so-ups.ru; maksim@odusz.so-ups.ru; chulkov@odusz.so-ups.ru; maltsev@odusz.so-ups.ru; sazonov-ig@odusz.so-ups.ru </value>
+            </setting>
+            <setting name="InstallPath" serializeAs="String">
+                <value>\\srv-fss-oducz\SOE_ASU-SD\ТРСОО\ReportMakerSD\</value>
+            </setting>
+            <setting name="ColumnsFilterNamesRDU" serializeAs="String">
+                <value>Остальные колонки:Дата окончания регистрации:Номер:Статус:Организация заявителя:Заявитель:ФГП:Исполнитель:Услуга:Тема:Описание (для списков):Код ожидания:Причина ожидания:Дата и время решения:Решение (для списков):Способ подачи обращения</value>
             </setting>
         </ReportMakerSD.Properties.Settings>
     </userSettings>
