--- a/ReportMakerSD/ReportMakerSD.csproj
+++ b/ReportMakerSD/ReportMakerSD.csproj
@@ -15,10 +15,10 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
-    <PublishUrl>\\srv-fss-oducz\SOE_ASU-SD\ТРСОО\ReportMakerSD\</PublishUrl>
+    <PublishUrl>N:\User_Data\IT\СОЭ АСУ\ТРСОО\ReportMakerSD\</PublishUrl>
     <Install>false</Install>
-    <InstallFrom>Unc</InstallFrom>
-    <UpdateEnabled>true</UpdateEnabled>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
@@ -26,7 +26,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <TargetCulture>ru-RU</TargetCulture>
-    <ApplicationRevision>26</ApplicationRevision>
+    <ApplicationRevision>61</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -117,11 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Class_SDR.cs" />
     <Compile Include="ReportMakerSD0_6.cs" />
     <Compile Include="ReportMakerSD0_5.cs" />
-    <Compile Include="MainForm2.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="ReportMakerSD0_4.cs" />
     <Compile Include="ReportMakerSD0_3.cs" />
     <Compile Include="SDRData.cs" />
